[package]
name = "scrobbled"
description = "Rust bindings for the Last.fm API"
version = "0.2.3"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/scrobbled"
repository = "https://github.com/Marlstar/scrobbled"
keywords = ["lastfm", "fm", "scrobble"]
license = "MIT"

[dependencies]
async-channel = "2.5.0"
axum = "0.8.4"
from_variants = "1.0.2"
md5 = "0.8.0"
open = "5.3.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["net"] }
