[package]
name = "scrobbled"
description = "Rust bindings for the Last.fm API"
version = "0.3.3"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/scrobbled"
repository = "https://github.com/Marlstar/scrobbled"
keywords = ["lastfm", "fm", "scrobble"]
license = "MIT"

[dependencies]
async-channel = "2.5.0"
axum = "0.8.4"
chrono = "0.4.41"
from_variants = "1.0.2"
md5 = "0.8.0"
open = "5.3.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["net"] }
